feat: free5gc deploy
